--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,13 @@
 Package: metapro
 Type: Package
-Title: Robust p-value combination methods
-Version: 1.3.0
+Title: Robust P-value Combination Methods
+Version: 1.5.0
 Author: Sora Yoon <yoonsora1@unist.ac.kr>
 Maintainer: Sora Yoon <yoonsora1@unist.ac.kr>
 Description: It provides four p-value combination methods.
 License: GPL (>=2)
 Encoding: UTF-8
 LazyData: true
-Imports: Rcpp (>= 0.12.18), metap, stats
-LinkingTo: Rcpp
+Imports: metap, stats, rJava, rSymPy
 RoxygenNote: 6.1.1
 
