--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ export(lancaster)
 export(wFisher)
 export(wZ)
 import("metap")
-import(Rcpp)
+import(rJava)
+import(rSymPy)
+importFrom("stats","pbeta")
 importFrom("stats","pchisq")
 importFrom("stats","pgamma")
+importFrom("stats","qbeta")
 importFrom("stats","qchisq")
 importFrom("stats","qgamma")
-useDynLib(metapro)
