--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export(lancaster)
 export(wFisher)
 export(wZ)
 import("metap")
-import(rJava)
-import(rSymPy)
+importFrom("rSymPy","Var")
+importFrom("rSymPy","sympy")
 importFrom("stats","pbeta")
 importFrom("stats","pchisq")
 importFrom("stats","pgamma")
