--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,4 @@ Encoding: UTF-8
 LazyData: true
 Imports: metap, stats, rSymPy
 RoxygenNote: 6.1.1
-URL: https://www.r-project.org, http://github.com/unistbig/metapro
+URL: http://github.com/unistbig/metapro
