--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,5 @@ Description: The meta-analysis is performed to increase the statistical power by
 License: GPL (>=2)
 Encoding: UTF-8
 LazyData: true
-Imports: metap, stats, rSymPy
+Imports: metap, stats
 RoxygenNote: 6.1.1
