--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Robust P-Value Combination Methods
 Version: 1.5.5
 Author: Sora Yoon <yoonsora1@unist.ac.kr>
 Maintainer: Sora Yoon <yoonsora1@unist.ac.kr>
-Description: The meta-analysis is performed to increase the statistical power by integrating the results from several experiments.
+Description: The meta-analysis is performed to increase the statistical power by integrating the results from several experiments. This package provides several methods for p-value combination.
 License: GPL (>=2)
 Encoding: UTF-8
 LazyData: true
